<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#F8F8FF"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#404040"
        android:gravity="center_vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"           
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" >

                <!-- <Button
                    android:id="@+id/signupback"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/backbutton"
                    android:text="@string/back"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:paddingBottom="5dp"/>-->
            </LinearLayout> 

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/signuptext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:text="Sign up"
                    android:textColor="#ffffff"
                    android:textSize="20dp"
                    android:textStyle="italic" 
                    />
            </LinearLayout>

           <!--  <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/signupcreate"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/createbutton"
                    android:text="@string/create"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout> -->
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="204dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/whitebox"
        android:orientation="vertical" >

       
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"          
        android:orientation="horizontal" >
        
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/un"
            android:text="Email"
            android:textColor="#ffffff" 
            android:textSize="18dp"/>
        
         <EditText
            android:id="@+id/emailtextboxsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="" 
            android:layout_marginLeft="7dp"
            android:textSize="18dp"
            android:singleLine="true"
            android:editable="true"
            android:hint="email"
            android:background="@android:color/transparent"/>
        
        </LinearLayout>
          <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#C8C8C8" /> 
        
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"          
        android:orientation="horizontal" >

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/pwdemail"
            android:text="Password"
            android:textColor="#ffffff" 
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/passwordsignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="" 
            android:layout_marginLeft="7dp"
            android:textSize="18dp"
            android:singleLine="true"
            android:editable="true"
            android:hint="password"
            android:password="true"
            android:background="@android:color/transparent"/>
        
        </LinearLayout>
        
      <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#C8C8C8" /> 
      
      
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"          
        android:orientation="horizontal" >

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/pwdemail"
            android:text="FName"
            android:textColor="#ffffff" 
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/firstnamesignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="" 
            android:layout_marginLeft="7dp"
            android:textSize="18dp"
            android:singleLine="true"
            android:editable="true"
            android:hint="first name"           
            android:background="@android:color/transparent"/>
        
        </LinearLayout>
        
       <View
            android:layout_width="fill_parent"
            android:layout_height="0.5dp"
            android:background="#C8C8C8" />
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"          
        android:orientation="horizontal" >

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:background="@drawable/name"
            android:text="LName"
            android:textColor="#ffffff" 
            android:textSize="18dp"/>
        <EditText
            android:id="@+id/lastnamesignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:text="" 
            android:layout_marginLeft="7dp"
            android:textSize="18dp"
            android:singleLine="true"
            android:editable="true"
            android:hint="last name"           
            android:background="@android:color/transparent"/>
        
        </LinearLayout>
      
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_marginTop="15dp">
    <Button
                    android:id="@+id/signupcreate"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"                   
                    android:background="@drawable/createbutton"
                    android:text="@string/create"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"/>
    </LinearLayout>
    
      <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_marginTop="10dp">
        <ImageView
            android:id="@+id/camimagesignup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/picture"/>
        
        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/thumbnail"
           android:layout_marginLeft="50dp"/>
            
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_marginTop="10dp">
       
            
            <TextView
            android:id="@+id/already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadysignuptext"
      		android:textStyle="bold"/>
        
        <TextView
            android:id="@+id/tapheresignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taptext" 
            android:layout_toRightOf="@id/already"
            android:textColor="#00008B"
            android:textStyle="bold"
            android:paddingLeft="7dp"/>
          </LinearLayout>
       <!--   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" 
        android:layout_marginTop="15dp">
        <ImageView
            android:id="@+id/camimagesignup"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/picture"/>
            
    </LinearLayout> -->

        


<RelativeLayout       
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"         
        >
        
    <Button
            android:layout_width="fill_parent"
            android:layout_height="54dp"
            android:background="#404040"
           android:layout_alignParentBottom="true"
           android:text="@string/secure" 
           android:textColor="#ffffff"
           android:paddingBottom="28dp" 
           android:textStyle="bold"/>
    
     <RelativeLayout       
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"         
        android:gravity="center_horizontal"> 
    <TextView
             android:id="@+id/seeour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="See our"             
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_alignParentBottom="true"
            android:paddingBottom="10dp"
           />
    
     <TextView
           android:id="@+id/termssignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Terms of Services"              
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:autoLink="all"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/seeour"
            android:paddingBottom="10dp"
            android:textColor="#00008B"/>
      
      <TextView
            android:id="@+id/and"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" and"             
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/termssignup"
            android:paddingBottom="10dp"
            />
      
      <TextView
            android:id="@+id/privacypolicysignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" Privacy Policy"             
            android:textColor="#00008B"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:textSize="14dp"
            android:autoLink="all"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/and"
            android:paddingBottom="10dp"/>
    
        </RelativeLayout>

</RelativeLayout>



</LinearLayout>